working version of Validation markdown for constant effects for blocked design with ICC set to 0

--- a/Validation/Validate_power_blocked_i1_2c.Rmd
+++ b/Validation/Validate_power_blocked_i1_2c.Rmd
@@ -67,7 +67,7 @@ This section sets up the simulation-level parameters, such as how many monte car
 design <- "blocked_i1_2c"
 
 sim.params.list <- list(
-    S = 2000          # Number of samples for Monte Carlo Simulation
+    S = 1000         # Number of samples for Monte Carlo Simulation
   , B = 2            # Number of samples for WestFall-Young. The equivalent is snum in our new method.
   , maxT = FALSE     # In WY procedure, whether to adjust based on ordered rawp values or ordered rawT values
   , alpha = 0.05     # Significance level
@@ -76,7 +76,8 @@ sim.params.list <- list(
   , tnum = 10000     # Number of test statistics (samples) for all procedures other than Westfall-Young
   , ncl = 2          # Number of computer clusters (max on RStudio Server is 16)
   , max.iter = 20    # Number of MDES and sample size iterations
-  , procs = c("Bonferroni", "BH", "Holm", "WY-SS", "WY-SD")
+  , procs = c("Bonferroni", "BH", "Holm")
+  # , procs = c("Bonferroni", "BH", "Holm", "WY-SS", "WY-SD")
                      # Multiple testing procedures to compute power for 
   , runSim = TRUE    # If TRUE, we will re-run the simulation. If FALSE, we will pull previous run result.
   , runPump = TRUE   # If TRUE, we will run method from our package. If FALSE, we will pull previous run result.
@@ -238,8 +239,6 @@ pander::pandoc.table(
 # Sample size validation
 
 School size: 50
-
-TODO: mess with defaults n.j0, J0?
 
 ```{r sampleCombined}
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
