--- a/Validation/Validate_power_blocked_i1.Rmd
+++ b/Validation/Validate_power_blocked_i1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Validate Power: blocked_i1_2c"
+title: "Validate Power: blocked_i1"
 author: "Kristin Porter, Zarni Htet, Kristen Hunter"
 output:
   html_document:
@@ -23,7 +23,7 @@ output:
 # Purpose
 
 This document lays out results for estimating statistical power and minimum detectable effect size (MDES) for:
-Blocked RCT, with 2 levels, constant treatment effects, and randomization done at level 1 (individual level).
+Blocked RCT, with 2 levels, and randomization done at level 1 (individual level). This document contains models assuming constant treatment effects, fixed treatment effects, and random treatment effects.
 
 We compare results of the derived methods against Monte Carlo Simulations & the PowerUp R package on power. The methods are derived by Kristin Porter as outlined in the paper/s here (Add reference section).
 
@@ -64,10 +64,9 @@ If you are previewing this in html, please click on the code section to review m
 This section sets up the simulation-level parameters, such as how many monte carlo samples to draw.
 
 ```{r simulation.parameters.setup, echo = TRUE}
-design <- "blocked_i1_2c"
 
 sim.params.list <- list(
-    S = 1000         # Number of samples for Monte Carlo Simulation
+    S = 100         # Number of samples for Monte Carlo Simulation
   , B = 2            # Number of samples for WestFall-Young. The equivalent is snum in our new method.
   , maxT = FALSE     # In WY procedure, whether to adjust based on ordered rawp values or ordered rawT values
   , alpha = 0.05     # Significance level
@@ -126,7 +125,7 @@ user.params.list <- list(
   M = 3                                   # number of outcomes
   , J = 20                                # number of schools
   , K = 2                                 # number of districts (still required for two-level model)
-  , n.j = 100                             # number of individuals per school
+  , n.j = 50                             # number of individuals per school
   , rho.default = rho.default             # default rho value (optional)
   , S.j = NULL                            # N-length vector of indiv school assignments (optional)
   , S.k = NULL                            # N-length vector of indiv district assignments (optional)
@@ -158,7 +157,6 @@ user.params.list <- list(
 )
 ```
 
-
 ### Setup 1: School size 100
 
 Main parameters:
@@ -173,10 +171,26 @@ Main parameters:
 
 `r colorize("Individual Statistical power is estimated to be around 0.8. Please check the table below for estimations of other definitions of statistical power. Across all power definitions, estimation results across the __PUMP__ package, __Monte Carlo Simulation__ results and __PowerUp__ package are about the same as detailed below.", "green")`
 
-```{r rho0.5tPMnj100}
+```{r 2c.rho0.5tPMnj100}
+design <- "blocked_i1_2c"
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
-blocked_i1_2c_nj100_power_plot <- gen.power.results.plot(params.file.base)
+blocked_i1_2c_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2c_nj100_power_plot)
+```
+
+
+```{r 2f.rho0.5tPMnj100}
+design <- "blocked_i1_2f"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2f_nj100_power_plot)
+```
+
+```{r 2r.rho0.5tPMnj100}
+design <- "blocked_i1_2r"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_nj100_power_plot)
 ```
 
 ### Setup 2: School size 75
@@ -185,12 +199,26 @@ print(blocked_i1_2c_nj100_power_plot)
 
 ```{r rho0.5tPMnj75}
 user.params.list[['n.j']] <- 75
-user.params.list[['N']] <- user.params.list[['n.j']]*user.params.list[['J']]
+```
 
-blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design))
+```{r 2c.rho0.5tPMnj75}
+design <- "blocked_i1_2c"
+blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj75_power_plot)
 ```
 
+
+```{r 2f.rho0.5tPMnj75}
+design <- "blocked_i1_2f"
+blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_nj75_power_plot)
+```
+
+```{r 2r.rho0.5tPMnj75}
+design <- "blocked_i1_2r"
+blocked_i1_2r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2r_nj75_power_plot)
+```
 
 ### Setup 3: School size 50
 
@@ -198,12 +226,106 @@ print(blocked_i1_2c_nj75_power_plot)
 
 ```{r rho0.5tPMnj50}
 user.params.list[['n.j']] <- 50
-user.params.list[['N']] <- user.params.list[['n.j']]*user.params.list[['J']]
+```
 
-blocked_i1_2c_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design))
+
+```{r 2c.rho0.5tPMnj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj50_power_plot)
 ```
 
+```{r 2f.rho0.5tPMnj50}
+design <- "blocked_i1_2f"
+blocked_i1_2f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2f_nj50_power_plot)
+```
+
+```{r 2r.rho0.5tPMnj50}
+design <- "blocked_i1_2r"
+blocked_i1_2r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2r_nj50_power_plot)
+```
+
+
+# Varying R2
+
+R2.1 = 0.6, 0.6, 0.6
+
+```{r r2.10.6nj50}
+user.params.list[['R2.1']] <- rep(0.6, M)  
+```
+
+```{r 2c.r2.10.6nj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_r2.1_power_plot)
+```
+
+
+R2.2 = 0.6, 0.6, 0.6
+
+```{r r2.20.6nj50}
+user.params.list[['R2.2']] <- rep(0.6, M)  
+```
+
+```{r 2c.r2.20.6nj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_r2.2_power_plot)
+```
+
+
+# Varying rho
+
+rho.default = 0.2
+
+```{r rho0.2tPMnj50}
+rho.default <- 0.2
+default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
+user.params.list[['rho.default']] <- rho.default
+user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
+user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <- rho.default
+```
+
+```{r 2c.rho0.2tPMnj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_rho0.2_power_plot)
+```
+
+rho.default = 0.8
+
+```{r rho0.8tPMnj50}
+rho.default <- 0.8
+default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
+user.params.list[['rho.default']] <- rho.default
+user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
+user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <-rho.default
+```
+
+```{r 2c.rho0.8tPMnj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_rho0.8_power_plot)
+```
+
+
+# Varying true positives
+
+MDES = 0.125, 0, 0
+
+```{r MDES0.12500nj50}
+rho.default <- 0.8
+user.params.list[['ATE_ES']] = c(0.125, 0, 0)
+```
+
+
+```{r 2c.MDES0.12500nj50}
+design <- "blocked_i1_2c"
+blocked_i1_2c_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2c_mdes0.1250.00.0.00_power_plot)
+```
 
 # MDES validation
 
@@ -213,26 +335,57 @@ In this section, we validate the derived minimum detectable effect size (MDES) f
 
 Below, we have input parameters of number of outcomes, minimum detectable effect size, statistical power, and significance level that would estimate a high statistical power value of above __0.65__ to __1.00__ for different definitions of power. This estimated power value is used as an input to the mdes function where we validate if the _returned_ __mdes__ value is close to the __mdes__ value that was inputted to provide the estimated power.
 
-```{r readPowerTable}
-# Reading the Power Table in for the corresponding specified parameters
-params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design = "blocked_i1_2c")
-power.file <- find_file(params.file.base, type = 'power')
-power.results <- readRDS(power.file)
-```
-
 ### Individual Power
 
 School size: 50
 
+```{r}
+# reset to defaults
+rho.default <- 0.5
+default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
+user.params.list[['rho.default']] <- rho.default
+user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
+user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <- default.rho.matrix
+user.params.list[['ATE_ES']] = c(0.125, 0.125, 0.125)
+user.params.list[['R2.1']] <- rep(0, M)  
+user.params.list[['R2.2']] <- rep(0, M)
+```
+
 `r colorize("The Bonferroni, Benjamini Hocheberg and Holms' __adjusted MDES__ and the __targeted MDES__ are within an acceptable margin of error for the specified targetted power. The __adjusted MDES__ is estimated at the __corresponding__ individual power in the table below. The __corresponding__ individual power is the power at which our MDES method stops looking for a MDES value close to the target MDES.", "green")`
 
-```{r mdesCombined}
+```{r 2c.mdesCombined}
+design <- "blocked_i1_2c"
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 blocked_i1_2c_mdes_results_nj50 <- readRDS(mdes.file)
 pander::pandoc.table(
   blocked_i1_2c_mdes_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE
+  style = "grid", split.tables = 100, row.names = FALSE, 
+  caption = design
+)
+```
+
+```{r 2f.mdesCombined}
+design <- "blocked_i1_2f"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+mdes.file <- find_file(params.file.base, type = 'mdes')
+blocked_i1_2f_mdes_results_nj50 <- readRDS(mdes.file)
+pander::pandoc.table(
+  blocked_i1_2f_mdes_results_nj50,
+  style = "grid", split.tables = 100, row.names = FALSE, 
+  caption = design
+)
+```
+
+```{r 2r.mdesCombined}
+design <- "blocked_i1_2r"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+mdes.file <- find_file(params.file.base, type = 'mdes')
+blocked_i1_2r_mdes_results_nj50 <- readRDS(mdes.file)
+pander::pandoc.table(
+  blocked_i1_2r_mdes_results_nj50,
+  style = "grid", split.tables = 100, row.names = FALSE, 
+  caption = design
 )
 ```
 
@@ -240,72 +393,39 @@ pander::pandoc.table(
 
 School size: 50
 
-```{r sampleCombined}
+```{r 2c.sampleCombined}
+design <- "blocked_i1_2c"
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 sample.file <- find_file(params.file.base, type = 'sample')
 blocked_i1_2c_sample_results_nj50 <- readRDS(sample.file)
 pander::pandoc.table(
   blocked_i1_2c_sample_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE
+  style = "grid", split.tables = 100, row.names = FALSE,
+  caption = design
 )
 ```
 
 
+```{r 2f.sampleCombined}
+design <- "blocked_i1_2f"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+sample.file <- find_file(params.file.base, type = 'sample')
+blocked_i1_2f_sample_results_nj50 <- readRDS(sample.file)
+pander::pandoc.table(
+  blocked_i1_2f_sample_results_nj50,
+  style = "grid", split.tables = 100, row.names = FALSE,
+  caption = design
+)
+```
 
-
-
-```{r fixedEffects.parms}
-
-# user.params.list[['omega.2']] = 1
-# model.params.list <- convert.params(user.params.list)
-# library(MASS)
-# Sigma.z  <- gen_cov_matrix(
-#   model.params.list[['M']],
-#   model.params.list[['eta1.sq']],
-#   model.params.list[['eta1.sq']],
-#   user.params.list[['rho.z']]
-# )
-# z <- mvrnorm(
-#   model.params.list[['M']]*user.params.list[['K']],
-#   rep(0, model.params.list[['M']]),
-#   Sigma.z, empirical = TRUE
-# )
-# 
-# user.params.list <- list(
-#   M = 3                                   # number of outcomes
-#   , J = 20                                # number of schools
-#   , K = 2                                 # number of districts (still required for two-level model)
-#   , N = 100*20                            # number of individuals
-#   , n.j = 100                             # number of individuals per school
-#   , rho.default = rho.default             # default rho value (optional)
-#   , S.j = NULL                            # N-length vector of indiv school assignments (optional)
-#   , S.k = NULL                            # N-length vector of indiv district assignments (optional)
-#   ################################################## grand mean otucome and impact
-#   , Xi0 = 0                               # scalar grand mean outcome under no treatment
-#   , MDES = rep(0.125, M)                  # minimum detectable effect size      
-#   ################################################## level 3: districts
-#   , R2.3 = rep(0, M)                      # percent of district variation explained by district covariates
-#                                           # for 2-level model, set to 0
-#   , rho.D = default.rho.matrix            # MxM correlation matrix of district covariates
-#   , ICC.3 = rep(0, M)                     # district intraclass correlation
-#                                           # for 2-level model, set to 0
-#   , omega.3 = 0                           # ratio of district effect size variability to random effects variability
-#   , rho.w = default.rho.matrix            # MxM matrix of correlations for district random effects
-#   , rho.z = default.rho.matrix            # MxM matrix of correlations for district impacts
-#   , theta.wz = matrix(0, M, M)            # MxM matrix of correlations between district random effects and impacts
-#   , fixed.z = FALSE                       # fixed effects?
-#   ################################################## level 2: schools
-#   , R2.2 = rep(0, M)                      # percent of school variation explained by school covariates
-#   , rho.X = default.rho.matrix            # MxM correlation matrix of school covariates
-#   , ICC.2 = rep(0.5, M)                   # school intraclass correlation	
-#   , omega.2 = 0                           # ratio of school effect size variability to random effects variability
-#   , rho.u = default.rho.matrix            # MxM matrix of correlations for school random effects
-#   , rho.v = default.rho.matrix            # MxM matrix of correlations for school impacts
-#   , theta.uv = matrix(0, M, M)            # MxM matrix of correlations between school random effects and impacts
-#   , fixed.v = FALSE                       # fixed effects?
-#   ################################################## level 1: individuals
-#   , R2.1 = rep(0, M)                      # percent of indiv variation explained by indiv covariates
-#   , rho.C = default.rho.matrix            # MxM correlation matrix of individual covariates
-#   , rho.r = default.rho.matrix            # MxM matrix of correlations for individual residuals 
-# )
+```{r 2r.sampleCombined}
+design <- "blocked_i1_2r"
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+sample.file <- find_file(params.file.base, type = 'sample')
+blocked_i1_2r_sample_results_nj50 <- readRDS(sample.file)
+pander::pandoc.table(
+  blocked_i1_2r_sample_results_nj50,
+  style = "grid", split.tables = 100, row.names = FALSE,
+  caption = design
+)
 ```
