--- a/Validation/Validate_power_blocked_i1.Rmd
+++ b/Validation/Validate_power_blocked_i1.Rmd
@@ -173,6 +173,7 @@ Main parameters:
 
 ```{r 2c.rho0.5tPMnj100}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2c_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2c_nj100_power_plot)
@@ -181,6 +182,7 @@ print(blocked_i1_2c_nj100_power_plot)
 
 ```{r 2f.rho0.5tPMnj100}
 design <- "blocked_i1_2f"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2f_nj100_power_plot)
@@ -188,6 +190,7 @@ print(blocked_i1_2f_nj100_power_plot)
 
 ```{r 2r.rho0.5tPMnj100}
 design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2r_nj100_power_plot)
@@ -203,6 +206,7 @@ user.params.list[['n.j']] <- 75
 
 ```{r 2c.rho0.5tPMnj75}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj75_power_plot)
 ```
@@ -210,12 +214,14 @@ print(blocked_i1_2c_nj75_power_plot)
 
 ```{r 2f.rho0.5tPMnj75}
 design <- "blocked_i1_2f"
+user.params.list[['omega.2']] = 0.5
 blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj75_power_plot)
 ```
 
 ```{r 2r.rho0.5tPMnj75}
 design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
 blocked_i1_2r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2r_nj75_power_plot)
 ```
@@ -231,18 +237,21 @@ user.params.list[['n.j']] <- 50
 
 ```{r 2c.rho0.5tPMnj50}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 blocked_i1_2c_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj50_power_plot)
 ```
 
 ```{r 2f.rho0.5tPMnj50}
 design <- "blocked_i1_2f"
+user.params.list[['omega.2']] = 0.5
 blocked_i1_2f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2f_nj50_power_plot)
 ```
 
 ```{r 2r.rho0.5tPMnj50}
 design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
 blocked_i1_2r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2r_nj50_power_plot)
 ```
@@ -258,6 +267,7 @@ user.params.list[['R2.1']] <- rep(0.6, M)
 
 ```{r 2c.r2.10.6nj50}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 blocked_i1_2c_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_r2.1_power_plot)
 ```
@@ -271,6 +281,7 @@ user.params.list[['R2.2']] <- rep(0.6, M)
 
 ```{r 2c.r2.20.6nj50}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 blocked_i1_2c_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_r2.2_power_plot)
 ```
@@ -327,6 +338,20 @@ blocked_i1_2c_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params
 print(blocked_i1_2c_mdes0.1250.00.0.00_power_plot)
 ```
 
+# Varying ICC for relevant models
+
+```{r ICC20.5nj50}
+user.params.list[['ICC.2']] = rep(0.5, M)
+user.params.list[['ATE_ES']] = c(0.125, 0.125, 0.125)
+```
+
+```{r 2r.ICC20.5nj50}
+design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
+blocked_i1_2r_ICC2.0.5_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_2r_ICC2.0.5_power_plot)
+```
+
 # MDES validation
 
 In this section, we validate the derived minimum detectable effect size (MDES) function across different __MTP__ (Bonferroni, Benjamini-Hocheberg and Holms) and __power definition__ (individual and minimum_1).  The validation is carried out by generating power values for the specific __MTP__ and __power__ definitions for a specific __MDES__. Then, we supply the generated estimate __power__ as an input parameter to see if the specified __MDES__ is returned.
@@ -355,6 +380,7 @@ user.params.list[['R2.2']] <- rep(0, M)
 
 ```{r 2c.mdesCombined}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
@@ -372,6 +398,7 @@ pander::pandoc.table(
 
 ```{r 2f.mdesCombined}
 design <- "blocked_i1_2f"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
@@ -389,6 +416,7 @@ pander::pandoc.table(
 
 ```{r 2r.mdesCombined}
 design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
@@ -410,6 +438,7 @@ School size: 50
 
 ```{r 2c.sampleCombined}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] = 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
@@ -428,6 +457,7 @@ pander::pandoc.table(
 
 ```{r 2f.sampleCombined}
 design <- "blocked_i1_2f"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
@@ -445,6 +475,7 @@ pander::pandoc.table(
 
 ```{r 2r.sampleCombined}
 design <- "blocked_i1_2r"
+user.params.list[['omega.2']] = 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
