--- a/Admin/user_experience.Rmd
+++ b/Admin/user_experience.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 - Return a vector of power for all individual outcomes rather than the average, fix downstream effects of this.
 - If we have zero/null effects, warn user that min2 and complete power will be low, and possibly don't return those values.
 - Fix for when power = 0 case for MDES and sample size
+- clarify that right now maxT and minP are the SAME method.
 
 # UI notes
 
