--- a/Validation/Validate_power_blocked_i1.Rmd
+++ b/Validation/Validate_power_blocked_i1.Rmd
@@ -41,6 +41,7 @@ panderOptions('round', 3)
 
 # simulation and user parameters
 source(here::here("Validation/Simulations", "params.R"))
+params.default <- user.params.list
 
 # validate MDES and sample size?
 validate.mdes.ss = FALSE
@@ -49,9 +50,7 @@ validate.mdes.ss = FALSE
 
 # Power Validation
 
-In this section, we validate power results for different definitions of power, __minimum__, __individual__ and __complete__ for three multiple adjustment multiple methods: __Bonferroni__, __Benjamini Hocheberg__ and __Holm__.
-
-Each subsection of the power validation below is a variation of __rho__, the correlation between outcomes, the __number of individuals per school__, and the number of __true positives__ in M outcomes. For more details on input parameters, please refer to the paper or the Appendix section at the bottom of this markdown.
+In this section, we validate power results for different definitions of power and different adjustment procedures.
 
 If you are previewing this in html, please click on the code section to review more detailed parameters.
 
@@ -71,17 +70,19 @@ Main parameters:
 
 * n.j = 100
 * M = 3
-* truePos = M
 * J = 20
 * rho = (0.5, 0.5, 0.5)
 * MDES = (0.125, 0.125, 0.125)
-* R2.2 = (0,0,0)
+* R2.1 = (0, 0, 0)
+* R2.2 = (0, 0, 0)
+* ICC.2 = (0, 0, 0)
+* Omega.2 = 0.5
 
 `r colorize("Individual Statistical power is estimated to be around 0.8. Please check the table below for estimations of other definitions of statistical power. Across all power definitions, estimation results across the __PUMP__ package, __Monte Carlo Simulation__ results and __PowerUp__ package are about the same as detailed below.", "green")`
 
 ```{r 2c.rho0.5tPMnj100}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2c_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2c_nj100_power_plot)
@@ -90,7 +91,7 @@ print(blocked_i1_2c_nj100_power_plot)
 
 ```{r 2f.rho0.5tPMnj100}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2f_nj100_power_plot)
@@ -98,7 +99,7 @@ print(blocked_i1_2f_nj100_power_plot)
 
 ```{r 2r.rho0.5tPMnj100}
 design <- "blocked_i1_2r"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_2r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2r_nj100_power_plot)
@@ -114,7 +115,7 @@ user.params.list[['n.j']] <- 75
 
 ```{r 2c.rho0.5tPMnj75}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj75_power_plot)
 ```
@@ -122,14 +123,14 @@ print(blocked_i1_2c_nj75_power_plot)
 
 ```{r 2f.rho0.5tPMnj75}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 blocked_i1_2c_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj75_power_plot)
 ```
 
 ```{r 2r.rho0.5tPMnj75}
 design <- "blocked_i1_2r"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 blocked_i1_2r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2r_nj75_power_plot)
 ```
@@ -145,21 +146,21 @@ user.params.list[['n.j']] <- 50
 
 ```{r 2c.rho0.5tPMnj50}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 blocked_i1_2c_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_nj50_power_plot)
 ```
 
 ```{r 2f.rho0.5tPMnj50}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 blocked_i1_2f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2f_nj50_power_plot)
 ```
 
 ```{r 2r.rho0.5tPMnj50}
 design <- "blocked_i1_2r"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 blocked_i1_2r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2r_nj50_power_plot)
 ```
@@ -175,9 +176,10 @@ user.params.list[['R2.1']] <- rep(0.6, M)
 
 ```{r 2c.r2.10.6nj50}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 blocked_i1_2c_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_r2.1_power_plot)
+user.params.list[['R2.1']] <- params.default[['R2.1']]  
 ```
 
 
@@ -189,9 +191,10 @@ user.params.list[['R2.2']] <- rep(0.6, M)
 
 ```{r 2c.r2.20.6nj50}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 blocked_i1_2c_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_r2.2_power_plot)
+user.params.list[['R2.2']] <- params.default[['R2.2']]  
 ```
 
 
@@ -227,6 +230,12 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 design <- "blocked_i1_2c"
 blocked_i1_2c_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_rho0.8_power_plot)
+# reset
+rho.default <- params.default[['rho.default']]
+default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
+user.params.list[['rho.default']] <- rho.default
+user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
+user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <-rho.default
 ```
 
 
@@ -235,29 +244,32 @@ print(blocked_i1_2c_rho0.8_power_plot)
 MDES = 0.125, 0, 0
 
 ```{r MDES0.12500nj50}
-rho.default <- 0.8
-user.params.list[['ATE_ES']] = c(0.125, 0, 0)
+user.params.list[['ATE_ES']] <- c(0.125, 0, 0)
 ```
 
 
 ```{r 2c.MDES0.12500nj50}
 design <- "blocked_i1_2c"
+user.params.list[['omega.2']] <- 0
 blocked_i1_2c_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2c_mdes0.1250.00.0.00_power_plot)
+user.params.list[['ATE_ES']] <- params.default[['ATE_ES']]
 ```
 
 # Varying ICC for relevant models
 
+ICC.2 = c(0.8, 0.8, 0.8)
+
 ```{r ICC20.5nj50}
-user.params.list[['ICC.2']] = rep(0.5, M)
-user.params.list[['ATE_ES']] = c(0.125, 0.125, 0.125)
+user.params.list[['ICC.2']] <- rep(0.8, M)
 ```
 
 ```{r 2r.ICC20.5nj50}
 design <- "blocked_i1_2r"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 blocked_i1_2r_ICC2.0.5_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_2r_ICC2.0.5_power_plot)
+user.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
 
 # MDES validation
