--- a/Validation/Validate_power_blocked_i1_3r.Rmd
+++ b/Validation/Validate_power_blocked_i1_3r.Rmd
@@ -51,6 +51,7 @@ validate.mdes.ss = FALSE
 # set document-level parameters
 user.params.list[['omega.2']] <- 0.5
 user.params.list[['omega.3']] <- 0.5
+user.params.list[['K']] <- 4
 design <- "blocked_i1_3r"
 ```
 
