get MDES code working but not optimized with other changes

--- a/Admin/user_experience.Rmd
+++ b/Admin/user_experience.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 - Standard error for PowerUP??
 - Make default ICC 0.2
 - Check that ICC.2 + ICC.3 sum to less than 1
+- A user likely will ask for MDES for multiple types of power, is there a way to exploit previous power calculations? Is it worth it?
 
 ```
 powerup_results$se       <- powerup_results$parms$es/powerup_results$ncp
