sample size code now follows same optimization as mdes

--- a/Admin/user_experience.Rmd
+++ b/Admin/user_experience.Rmd
@@ -23,6 +23,8 @@ knitr::opts_chunk$set(echo = TRUE)
 - Check that ICC.2 + ICC.3 sum to less than 1
 - A user likely will ask for MDES for multiple types of power, is there a way to exploit previous power calculations? Is it worth it?
 - Fix expected time diff for simulation!
+- Sample size if MDES is different for different outcomes. Not supported!!
+- Always assumes two.tailed, one tailed not implemented
 
 ```
 powerup_results$se       <- powerup_results$parms$es/powerup_results$ncp
