--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -49,8 +49,9 @@ validate.mdes.ss = FALSE
 
 ```{r}
 # set document-level parameters
-user.params.list[['omega.2']] <- params.default[['omega.2']]
 user.params.list[['K']] <- params.default[['K']]
+user.params.list[['omega.2']] <- 0
+user.params.list[['omega.3']] <- params.default[['omega.3']]
 ```
 
 
@@ -96,7 +97,6 @@ user.params.list[['n.j']] <- 100
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -104,7 +104,6 @@ print(blocked_c2_3f_nj100_power_plot)
 
 ```{r 3r.nj100}
 design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3r_nj100_power_plot)
@@ -120,14 +119,12 @@ user.params.list[['n.j']] <- 75
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
 
 ```{r 3r.nj75}
 design <- "blocked_c2_3r"
-omega.3.r.default
 blocked_c2_3r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_nj75_power_plot)
 ```
@@ -143,14 +140,12 @@ user.params.list[['n.j']] <- 50
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_nj50_power_plot)
 ```
 
 ```{r 3r.nj50}
 design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
 blocked_i1_3r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_nj50_power_plot)
 ```
@@ -165,16 +160,8 @@ user.params.list[['R2.1']] <- rep(0.6, M)
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
-```
-
-```{r 3r.r2.10.6}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_r2.1_power_plot)
 ```
 
 ```{r r2.1.reset}
@@ -189,16 +176,8 @@ user.params.list[['R2.2']] <- rep(0.6, M)
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
-```
-
-```{r 3r.r2.20.6}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_r2.2_power_plot)
 ```
 
 ```{r r2.2.reset}
@@ -213,16 +192,8 @@ user.params.list[['R2.3']] <- rep(0.6, M)
 
 ```{r 3f.r2.30.6}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
-```
-
-```{r 3r.r2.30.6}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_r2.3_power_plot)
 ```
 
 ```{r r2.3.reset}
@@ -243,16 +214,8 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
-```
-
-```{r 3r.rho0.2}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_rho0.2_power_plot)
 ```
 
 rho.default = 0.8
@@ -267,18 +230,9 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
-
-```{r 3r.rho0.8}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_rho0.8_power_plot)
-```
-
 
 ```{r rho.reset}
 # reset
@@ -300,16 +254,8 @@ user.params.list[['ATE_ES']] <- c(0.125, 0, 0)
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
-```
-
-```{r 3r.MDES0.12500}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_mdes0.1250.00.0.00_power_plot)
 ```
 
 ```{r MDES.reset}
@@ -318,48 +264,32 @@ user.params.list[['ATE_ES']] <- params.default[['ATE_ES']]
 
 # Varying ICC
 
-ICC.2 = c(0.8, 0.8, 0.8)
+ICC.2 = c(0.7, 0.7, 0.7)
 
-```{r ICC20.8}
-user.params.list[['ICC.2']] <- rep(0.8, M)
+```{r ICC20.7}
+user.params.list[['ICC.2']] <- rep(0.7, M)
 ```
 
-```{r 3f.ICC20.8}
+```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
-blocked_c2_3f_ICC2.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_ICC2.0.8_power_plot)
-```
-
-```{r 3r.ICC20.8}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_ICC2.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_ICC2.0.8_power_plot)
+blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_ICC2.0.7_power_plot)
 ```
 
 ```{r ICC2.reset}
 user.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
 
-ICC.3 = c(0.8, 0.8, 0.8)
+ICC.3 = c(0.7, 0.7, 0.7)
 
-```{r ICC30.8}
-user.params.list[['ICC.3']] <- rep(0.8, M)
+```{r ICC30.7}
+user.params.list[['ICC.3']] <- rep(0.7, M)
 ```
 
-```{r 3f.ICC30.8}
+```{r 3f.ICC30.7}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
-blocked_c2_3f_ICC3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_ICC3.0.8_power_plot)
-```
-
-```{r 3r.ICC30.8}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_ICC3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_ICC3.0.8_power_plot)
+blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_ICC3.0.7_power_plot)
 ```
 
 ```{r ICC3.reset}
@@ -368,31 +298,7 @@ user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 
 # Varying Omega
 
-omega.2 = 0.8, omega.3 = 0.5
-
-```{r omega20.8}
-user.params.list[['omega.2']] <- 0.8
-```
-
-```{r 3f.omega20.8}
-design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
-blocked_c2_3f_omega2.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_omega2.0.8_power_plot)
-```
-
-```{r 3r.omega20.8}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_omega2.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_omega2.0.8_power_plot)
-```
-
-```{r omega2.reset}
-user.params.list[['omega.2']] <- params.default[['omega.2']]
-```
-
-omega.2 = 0.5, omega.3 = 0.8
+omega.3 = 0.8
 
 ```{r omega30.8}
 user.params.list[['omega.3']] <- 0.8
@@ -400,44 +306,16 @@ user.params.list[['omega.3']] <- 0.8
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
 
 ```{r 3r.omega30.8}
 design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
 blocked_i1_3r_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_omega3.0.8_power_plot)
 ```
 
 ```{r omega3.reset}
 user.params.list[['omega.3']] <- params.default[['omega.3']]
-```
-
-omega.2 = 0.8, omega.3 = 0.8
-
-```{r omega20.8omega30.8}
-user.params.list[['omega.2']] <- 0.8
-user.params.list[['omega.3']] <- 0.8
-```
-
-```{r 3f.omega20.8omega30.8}
-design <- "blocked_c2_3f"
-user.params.list[['omega.3']] <- 0
-blocked_c2_3f_omega2.0.8omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_omega2.0.8omega3.0.8_power_plot)
-```
-
-```{r 3r.omega20.8omega30.8}
-design <- "blocked_c2_3r"
-user.params.list[['omega.3']] <- params.default[['omega.3']]
-blocked_c2_3r_omega2.0.8omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3r_omega2.0.8omega3.0.8_power_plot)
-```
-
-```{r omega2omega3.reset}
-user.params.list[['omega.2']] <- 0.8
-user.params.list[['omega.3']] <- 0.8
 ```
