--- a/Validation/validate_cluster_c2_2r.Rmd
+++ b/Validation/validate_cluster_c2_2r.Rmd
@@ -49,6 +49,7 @@ validate.mdes.ss = FALSE
 
 ```{r universal.params}
 design <- "simple_c2_2r"
+user.params.list[['omega.2']] <- 0
 user.params.list[['K']] <- 1
 ```
 
