--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -97,6 +97,7 @@ user.params.list[['n.j']] <- 100
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -104,6 +105,7 @@ print(blocked_c2_3f_nj100_power_plot)
 
 ```{r 3r.nj100}
 design <- "blocked_c2_3r"
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3r_nj100_power_plot)
@@ -119,12 +121,14 @@ user.params.list[['n.j']] <- 75
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
 
 ```{r 3r.nj75}
 design <- "blocked_c2_3r"
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_c2_3r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_nj75_power_plot)
 ```
@@ -140,12 +144,14 @@ user.params.list[['n.j']] <- 50
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_nj50_power_plot)
 ```
 
 ```{r 3r.nj50}
 design <- "blocked_c2_3r"
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_i1_3r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_nj50_power_plot)
 ```
@@ -160,6 +166,7 @@ user.params.list[['R2.1']] <- rep(0.6, M)
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
 ```
@@ -176,6 +183,7 @@ user.params.list[['R2.2']] <- rep(0.6, M)
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
 ```
@@ -192,6 +200,7 @@ user.params.list[['R2.3']] <- rep(0.6, M)
 
 ```{r 3f.r2.30.6}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
@@ -214,6 +223,7 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
 ```
@@ -230,6 +240,7 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
@@ -254,6 +265,7 @@ user.params.list[['ATE_ES']] <- c(0.125, 0, 0)
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
 ```
@@ -272,8 +284,16 @@ user.params.list[['ICC.2']] <- rep(0.7, M)
 
 ```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC2.0.7_power_plot)
+```
+
+```{r 3r.ICC20.7}
+design <- "blocked_c2_3r"
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
+blocked_c2_3r_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_ICC2.0.7_power_plot)
 ```
 
 ```{r ICC2.reset}
@@ -286,10 +306,10 @@ ICC.3 = c(0.7, 0.7, 0.7)
 user.params.list[['ICC.3']] <- rep(0.7, M)
 ```
 
-```{r 3f.ICC30.7}
-design <- "blocked_c2_3f"
-blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_ICC3.0.7_power_plot)
+```{r 3r.ICC30.7}
+design <- "blocked_c2_3r"
+blocked_c2_3r_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_ICC3.0.7_power_plot)
 ```
 
 ```{r ICC3.reset}
@@ -306,12 +326,14 @@ user.params.list[['omega.3']] <- 0.8
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- 0
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
 
 ```{r 3r.omega30.8}
 design <- "blocked_c2_3r"
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_i1_3r_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_omega3.0.8_power_plot)
 ```
