--- a/Validation/validate_blocked_i1_2cfr.Rmd
+++ b/Validation/validate_blocked_i1_2cfr.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Validate Power: blocked_i1_2cfr"
 author: "Kristin Porter, Zarni Htet, Kristen Hunter"
+date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output:
   html_document:
-    code_folding: hide
     df_print: paged
     fig_caption: yes
     fig_height: 8
@@ -20,12 +20,11 @@ output:
     fig_width: 10
     toc: yes
 ---
-# Purpose
 
 This document lays out results for estimating statistical power and minimum detectable effect size (MDES) for:
 Blocked RCT, with 2 levels, and randomization done at level 1 (individual level). This document contains models assuming constant treatment effects, fixed treatment effects, and random treatment effects.
 
-We compare results of the derived methods against Monte Carlo Simulations & the PowerUp R package on power. The methods are derived by Kristin Porter as outlined in the paper/s here (Add reference section).
+We compare results of the derived methods against Monte Carlo Simulations & the PowerUp R package on power.
 
 ```{r knit.options, echo = FALSE}
 # by default, all code chunks will cache their results
@@ -58,9 +57,18 @@ user.params.list[['omega.3']] <- 0
 
 In this section, we validate power results for different definitions of power and different adjustment procedures.
 
-If you are previewing this in html, please click on the code section to review more detailed parameters.
+Default parameters:
 
-This section sets up the simulation-level parameters, such as how many monte carlo samples to draw.
+* M = `r user.params.list[['M']]`
+* J = `r user.params.list[['J']]`
+* rho: $\rho$ =  `r user.params.list[['rho.default']]`
+* ATE ES = `r user.params.list[['ATE_ES']]`
+* R2.1: $R^2_1$ = `r user.params.list[['R2.1']]`
+
+Parameters by model type:
+
+* Omega: $\omega_2 = 0$ for constant effects, $\omega_2$ = `r user.params.list[['omega.s']]` for fixed and random
+* ICC: $\text{ICC}_2 = 0$ for constant and fixed effects, $\text{ICC}_2$ = `r user.params.list[['ICC.2']]` for random effects
 
 ```{r sim.params}
 # print(sim.params.list)
@@ -70,26 +78,13 @@ This section sets up the simulation-level parameters, such as how many monte car
 # print(user.params.list)
 ```
 
-### Setup 1: School size 100
-
-Main parameters:
-
-* n.j = 100
-* M = 3
-* J = 20
-* rho = (0.5, 0.5, 0.5)
-* MDES = (0.125, 0.125, 0.125)
-* R2.1 = (0, 0, 0)
-* R2.2 = (0, 0, 0)
-* ICC.2 = (0, 0, 0)
-* Omega.2 = 0.5
-
-`r colorize("Individual Statistical power is estimated to be around 0.8. Please check the table below for estimations of other definitions of statistical power. Across all power definitions, estimation results across the __PUMP__ package, __Monte Carlo Simulation__ results and __PowerUp__ package are about the same as detailed below.", "green")`
-
+## Varying school size
 
 ```{r nj100}
 user.params.list[['n.j']] <- 100
 ```
+
+$\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 2c.nj100}
 design <- "blocked_i1_2c"
@@ -119,13 +114,11 @@ blocked_i1_2r_nj100_power_plot <- gen.power.results.plot(params.file.base, desig
 print(blocked_i1_2r_nj100_power_plot)
 ```
 
-### Setup 2: School size 75
-
-* n.j = 75
-
 ```{r nj75}
 user.params.list[['n.j']] <- 75
 ```
+
+$\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 2c.nj75}
 design <- "blocked_i1_2c"
@@ -152,13 +145,11 @@ blocked_i1_2r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(use
 print(blocked_i1_2r_nj75_power_plot)
 ```
 
-### Setup 3: School size 50
-
-* n.j = 50
-
 ```{r nj50}
 user.params.list[['n.j']] <- 50
 ```
+
+$\bar{n}$ = `r user.params.list[['nbar']]`
 
 
 ```{r 2c.nj50}
@@ -186,13 +177,13 @@ print(blocked_i1_2r_nj50_power_plot)
 ```
 
 
-# Varying R2
-
-R2.1 = 0.6, 0.6, 0.6
+## Varying R2
 
 ```{r r2.10.6}
 user.params.list[['R2.1']] <- rep(0.6, M)  
 ```
+
+$R^2_1 =$ `r user.params.list[['R2.1']]`
 
 ```{r 2c.r2.10.6}
 design <- "blocked_i1_2c"
@@ -204,11 +195,12 @@ user.params.list[['R2.1']] <- params.default[['R2.1']]
 ```
 
 
-R2.2 = 0.6, 0.6, 0.6
-
 ```{r r2.20.6}
 user.params.list[['R2.2']] <- rep(0.6, M)  
 ```
+
+$R^2_2 =$ `r user.params.list[['R2.2']]`
+(This should not affect power!)
 
 ```{r 2c.r2.20.6}
 design <- "blocked_i1_2c"
@@ -220,9 +212,7 @@ user.params.list[['R2.2']] <- params.default[['R2.2']]
 ```
 
 
-# Varying rho
-
-rho.default = 0.2
+## Varying rho
 
 ```{r rho0.2}
 rho.default <- 0.2
@@ -232,6 +222,8 @@ user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
 user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <- rho.default
 ```
 
+$\rho =$ `r user.params.list[['rho.default']]`
+
 ```{r 2c.rho0.2}
 design <- "blocked_i1_2c"
 user.params.list[['omega.2']] <- 0
@@ -240,8 +232,6 @@ blocked_i1_2c_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(u
 print(blocked_i1_2c_rho0.2_power_plot)
 ```
 
-rho.default = 0.8
-
 ```{r rho0.8}
 rho.default <- 0.8
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
@@ -249,6 +239,8 @@ user.params.list[['rho.default']] <- rho.default
 user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
 user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <-rho.default
 ```
+
+$\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 2c.rho0.8}
 design <- "blocked_i1_2c"
@@ -263,14 +255,13 @@ user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[[
 ```
 
 
-# Varying true positives
-
-MDES = 0.125, 0, 0
+## Varying true positives
 
 ```{r MDES0.12500}
 user.params.list[['ATE_ES']] <- c(0.125, 0, 0)
 ```
 
+ATE (ES) = `r user.params.list[['ATE_ES']]`
 
 ```{r 2c.MDES0.12500}
 design <- "blocked_i1_2c"
@@ -281,13 +272,13 @@ print(blocked_i1_2c_mdes0.1250.00.0.00_power_plot)
 user.params.list[['ATE_ES']] <- params.default[['ATE_ES']]
 ```
 
-# Varying ICC for relevant models
-
-ICC.2 = c(0.8, 0.8, 0.8)
+## Varying ICC
 
 ```{r ICC20.9}
 user.params.list[['ICC.2']] <- rep(0.8, M)
 ```
+
+$\text{ICC}_2$ = `r user.params.list[['ICC.2']]`
 
 ```{r 2r.ICC20.8}
 design <- "blocked_i1_2r"
@@ -300,29 +291,13 @@ user.params.list[['ICC.2']] <- params.default[['ICC.2']]
 
 # MDES validation
 
-In this section, we validate the derived minimum detectable effect size (MDES) function across different __MTP__ (Bonferroni, Benjamini-Hocheberg and Holms) and __power definition__ (individual and minimum_1).  The validation is carried out by generating power values for the specific __MTP__ and __power__ definitions for a specific __MDES__. Then, we supply the generated estimate __power__ as an input parameter to see if the specified __MDES__ is returned.
-
-## Power: 0.65 - 0.87
-
-Below, we have input parameters of number of outcomes, minimum detectable effect size, statistical power, and significance level that would estimate a high statistical power value of above __0.65__ to __1.00__ for different definitions of power. This estimated power value is used as an input to the mdes function where we validate if the _returned_ __mdes__ value is close to the __mdes__ value that was inputted to provide the estimated power.
-
-### Individual Power
-
-School size: 50
+In this section, we validate the minimum detectable effect size (MDES) across different __MTP__.  The validation is carried out by generating power values for the specific __MTP__ and __power__ definitions for a specific __MDES__. Then, we supply the generated estimate __power__ as an input parameter to see if the specified __MDES__ is returned.
 
 ```{r}
 # reset to defaults
-rho.default <- 0.5
-default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-user.params.list[['rho.default']] <- rho.default
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
-user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <- default.rho.matrix
-user.params.list[['ATE_ES']] = c(0.125, 0.125, 0.125)
-user.params.list[['R2.1']] <- rep(0, M)  
-user.params.list[['R2.2']] <- rep(0, M)
+user.params.list <- params.default 
 ```
 
-`r colorize("The Bonferroni, Benjamini Hocheberg and Holms' __adjusted MDES__ and the __targeted MDES__ are within an acceptable margin of error for the specified targetted power. The __adjusted MDES__ is estimated at the __corresponding__ individual power in the table below. The __corresponding__ individual power is the power at which our MDES method stops looking for a MDES value close to the target MDES.", "green")`
 
 ```{r 2c.mdesCombined}
 design <- "blocked_i1_2c"
@@ -383,7 +358,7 @@ if(length(mdes.file) == 0)
 
 # Sample size validation
 
-School size: 50
+In this section, we validate the derived sample size across different __MTP__. The validation is carried out by generating power values for the specific __MTP__ and __power__ definitions for a specific __MDES__. Then, we supply the generated estimate __power__ and MDES as an input parameter to see if the specified sample size is returned.
 
 ```{r 2c.sampleCombined}
 design <- "blocked_i1_2c"
